--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-texto html
+<!DOCTYPE  html>
+<html>
+	<head>
+		<title>Bienvenido  a mi sitio Web</title>
+	</head>
+	<body>
+		<p></p>
+	</body>
+</html>
